correcao tabela e criacao informações times

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -15,28 +15,28 @@
        "  text-align: right;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (20, 11)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>season</th><th>place</th><th>acronym</th><th>team</th><th>points</th><th>played</th><th>won</th><th>draw</th><th>loss</th><th>goalsht</th><th>goalsvt</th></tr><tr><td>i64</td><td>i64</td><td>str</td><td>str</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td></tr></thead><tbody><tr><td>2022</td><td>1</td><td>&quot;PAL&quot;</td><td>&quot;Palmeiras&quot;</td><td>81</td><td>38</td><td>23</td><td>12</td><td>3</td><td>66</td><td>27</td></tr><tr><td>2022</td><td>2</td><td>&quot;INT&quot;</td><td>&quot;Internacional&quot;</td><td>73</td><td>38</td><td>20</td><td>13</td><td>5</td><td>58</td><td>18</td></tr><tr><td>2022</td><td>3</td><td>&quot;FLU&quot;</td><td>&quot;Fluminense&quot;</td><td>70</td><td>38</td><td>21</td><td>7</td><td>10</td><td>63</td><td>24</td></tr><tr><td>2022</td><td>4</td><td>&quot;COR&quot;</td><td>&quot;Corinthians&quot;</td><td>65</td><td>38</td><td>18</td><td>11</td><td>9</td><td>44</td><td>20</td></tr><tr><td>2022</td><td>5</td><td>&quot;FLA&quot;</td><td>&quot;Flamengo&quot;</td><td>62</td><td>38</td><td>18</td><td>8</td><td>12</td><td>60</td><td>23</td></tr><tr><td>2022</td><td>6</td><td>&quot;CAP&quot;</td><td>&quot;Athletico-PR&quot;</td><td>58</td><td>38</td><td>16</td><td>10</td><td>12</td><td>48</td><td>17</td></tr><tr><td>2022</td><td>7</td><td>&quot;CAM&quot;</td><td>&quot;Atlético-MG&quot;</td><td>58</td><td>38</td><td>15</td><td>13</td><td>10</td><td>45</td><td>20</td></tr><tr><td>2022</td><td>8</td><td>&quot;FOR&quot;</td><td>&quot;Fortaleza&quot;</td><td>55</td><td>38</td><td>15</td><td>10</td><td>13</td><td>46</td><td>22</td></tr><tr><td>2022</td><td>9</td><td>&quot;SAO&quot;</td><td>&quot;São Paulo&quot;</td><td>54</td><td>38</td><td>13</td><td>15</td><td>10</td><td>55</td><td>23</td></tr><tr><td>2022</td><td>10</td><td>&quot;AMG&quot;</td><td>&quot;América-MG&quot;</td><td>53</td><td>38</td><td>15</td><td>8</td><td>15</td><td>40</td><td>18</td></tr><tr><td>2022</td><td>11</td><td>&quot;BOT&quot;</td><td>&quot;Botafogo&quot;</td><td>53</td><td>38</td><td>15</td><td>8</td><td>15</td><td>41</td><td>23</td></tr><tr><td>2022</td><td>12</td><td>&quot;SAN&quot;</td><td>&quot;Santos&quot;</td><td>47</td><td>38</td><td>12</td><td>11</td><td>15</td><td>44</td><td>16</td></tr><tr><td>2022</td><td>13</td><td>&quot;GOI&quot;</td><td>&quot;Goiás&quot;</td><td>46</td><td>38</td><td>11</td><td>13</td><td>14</td><td>40</td><td>20</td></tr><tr><td>2022</td><td>14</td><td>&quot;RBB&quot;</td><td>&quot;Bragantino&quot;</td><td>44</td><td>38</td><td>11</td><td>11</td><td>16</td><td>49</td><td>20</td></tr><tr><td>2022</td><td>15</td><td>&quot;CFC&quot;</td><td>&quot;Coritiba&quot;</td><td>42</td><td>38</td><td>12</td><td>6</td><td>20</td><td>39</td><td>14</td></tr><tr><td>2022</td><td>16</td><td>&quot;CUI&quot;</td><td>&quot;Cuiabá&quot;</td><td>41</td><td>38</td><td>10</td><td>11</td><td>17</td><td>31</td><td>14</td></tr><tr><td>2022</td><td>17</td><td>&quot;CEA&quot;</td><td>&quot;Ceará&quot;</td><td>37</td><td>38</td><td>7</td><td>16</td><td>15</td><td>34</td><td>14</td></tr><tr><td>2022</td><td>18</td><td>&quot;ACG&quot;</td><td>&quot;Atlético-GO&quot;</td><td>36</td><td>38</td><td>8</td><td>12</td><td>18</td><td>39</td><td>17</td></tr><tr><td>2022</td><td>19</td><td>&quot;AVA&quot;</td><td>&quot;Avaí&quot;</td><td>35</td><td>38</td><td>9</td><td>8</td><td>21</td><td>34</td><td>10</td></tr><tr><td>2022</td><td>20</td><td>&quot;JUV&quot;</td><td>&quot;Juventude&quot;</td><td>22</td><td>38</td><td>3</td><td>13</td><td>22</td><td>29</td><td>11</td></tr></tbody></table></div>"
+       "<small>shape: (20, 11)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>season</th><th>place</th><th>acronym</th><th>team</th><th>points</th><th>played</th><th>won</th><th>draw</th><th>loss</th><th>goalsht</th><th>goalsvt</th></tr><tr><td>i64</td><td>i64</td><td>str</td><td>str</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td></tr></thead><tbody><tr><td>2007</td><td>1</td><td>&quot;SAO&quot;</td><td>&quot;São Paulo&quot;</td><td>77</td><td>38</td><td>23</td><td>8</td><td>7</td><td>55</td><td>20</td></tr><tr><td>2007</td><td>2</td><td>&quot;SAN&quot;</td><td>&quot;Santos&quot;</td><td>62</td><td>38</td><td>19</td><td>5</td><td>14</td><td>57</td><td>21</td></tr><tr><td>2007</td><td>3</td><td>&quot;FLA&quot;</td><td>&quot;Flamengo&quot;</td><td>61</td><td>38</td><td>17</td><td>10</td><td>11</td><td>55</td><td>18</td></tr><tr><td>2007</td><td>4</td><td>&quot;FLU&quot;</td><td>&quot;Fluminense&quot;</td><td>61</td><td>38</td><td>16</td><td>13</td><td>9</td><td>57</td><td>27</td></tr><tr><td>2007</td><td>5</td><td>&quot;CRU&quot;</td><td>&quot;Cruzeiro&quot;</td><td>60</td><td>38</td><td>18</td><td>6</td><td>14</td><td>73</td><td>30</td></tr><tr><td>2007</td><td>6</td><td>&quot;GRE&quot;</td><td>&quot;Grêmio&quot;</td><td>58</td><td>38</td><td>17</td><td>7</td><td>14</td><td>44</td><td>12</td></tr><tr><td>2007</td><td>7</td><td>&quot;PAL&quot;</td><td>&quot;Palmeiras&quot;</td><td>58</td><td>38</td><td>16</td><td>10</td><td>12</td><td>48</td><td>21</td></tr><tr><td>2007</td><td>8</td><td>&quot;CAM&quot;</td><td>&quot;Atlético-MG&quot;</td><td>55</td><td>38</td><td>15</td><td>10</td><td>13</td><td>63</td><td>23</td></tr><tr><td>2007</td><td>9</td><td>&quot;BOT&quot;</td><td>&quot;Botafogo&quot;</td><td>55</td><td>38</td><td>14</td><td>13</td><td>11</td><td>62</td><td>24</td></tr><tr><td>2007</td><td>10</td><td>&quot;VAS&quot;</td><td>&quot;Vasco&quot;</td><td>54</td><td>38</td><td>15</td><td>9</td><td>14</td><td>58</td><td>18</td></tr><tr><td>2007</td><td>11</td><td>&quot;INT&quot;</td><td>&quot;Internacional&quot;</td><td>54</td><td>38</td><td>15</td><td>9</td><td>14</td><td>49</td><td>22</td></tr><tr><td>2007</td><td>12</td><td>&quot;CAP&quot;</td><td>&quot;Athletico-PR&quot;</td><td>54</td><td>38</td><td>14</td><td>12</td><td>12</td><td>51</td><td>22</td></tr><tr><td>2007</td><td>13</td><td>&quot;FIG&quot;</td><td>&quot;Figueirense&quot;</td><td>53</td><td>38</td><td>14</td><td>11</td><td>13</td><td>57</td><td>22</td></tr><tr><td>2007</td><td>14</td><td>&quot;SPO&quot;</td><td>&quot;Sport&quot;</td><td>51</td><td>38</td><td>14</td><td>9</td><td>15</td><td>54</td><td>14</td></tr><tr><td>2007</td><td>15</td><td>&quot;NAU&quot;</td><td>&quot;Náutico&quot;</td><td>49</td><td>38</td><td>14</td><td>7</td><td>17</td><td>66</td><td>31</td></tr><tr><td>2007</td><td>16</td><td>&quot;GOI&quot;</td><td>&quot;Goiás&quot;</td><td>45</td><td>38</td><td>13</td><td>6</td><td>19</td><td>49</td><td>17</td></tr><tr><td>2007</td><td>17</td><td>&quot;COR&quot;</td><td>&quot;Corinthians&quot;</td><td>44</td><td>38</td><td>10</td><td>14</td><td>14</td><td>40</td><td>23</td></tr><tr><td>2007</td><td>18</td><td>&quot;JUV&quot;</td><td>&quot;Juventude&quot;</td><td>41</td><td>38</td><td>11</td><td>8</td><td>19</td><td>43</td><td>18</td></tr><tr><td>2007</td><td>19</td><td>&quot;PAR&quot;</td><td>&quot;Paraná&quot;</td><td>41</td><td>38</td><td>11</td><td>8</td><td>19</td><td>42</td><td>18</td></tr><tr><td>2007</td><td>20</td><td>&quot;AFC&quot;</td><td>&quot;América-RN&quot;</td><td>17</td><td>38</td><td>4</td><td>5</td><td>29</td><td>24</td><td>12</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (20, 11)\n",
-       "┌────────┬───────┬─────────┬───────────────┬───┬──────┬──────┬─────────┬─────────┐\n",
-       "│ season ┆ place ┆ acronym ┆ team          ┆ … ┆ draw ┆ loss ┆ goalsht ┆ goalsvt │\n",
-       "│ ---    ┆ ---   ┆ ---     ┆ ---           ┆   ┆ ---  ┆ ---  ┆ ---     ┆ ---     │\n",
-       "│ i64    ┆ i64   ┆ str     ┆ str           ┆   ┆ i64  ┆ i64  ┆ i64     ┆ i64     │\n",
-       "╞════════╪═══════╪═════════╪═══════════════╪═══╪══════╪══════╪═════════╪═════════╡\n",
-       "│ 2022   ┆ 1     ┆ PAL     ┆ Palmeiras     ┆ … ┆ 12   ┆ 3    ┆ 66      ┆ 27      │\n",
-       "│ 2022   ┆ 2     ┆ INT     ┆ Internacional ┆ … ┆ 13   ┆ 5    ┆ 58      ┆ 18      │\n",
-       "│ 2022   ┆ 3     ┆ FLU     ┆ Fluminense    ┆ … ┆ 7    ┆ 10   ┆ 63      ┆ 24      │\n",
-       "│ 2022   ┆ 4     ┆ COR     ┆ Corinthians   ┆ … ┆ 11   ┆ 9    ┆ 44      ┆ 20      │\n",
-       "│ …      ┆ …     ┆ …       ┆ …             ┆ … ┆ …    ┆ …    ┆ …       ┆ …       │\n",
-       "│ 2022   ┆ 17    ┆ CEA     ┆ Ceará         ┆ … ┆ 16   ┆ 15   ┆ 34      ┆ 14      │\n",
-       "│ 2022   ┆ 18    ┆ ACG     ┆ Atlético-GO   ┆ … ┆ 12   ┆ 18   ┆ 39      ┆ 17      │\n",
-       "│ 2022   ┆ 19    ┆ AVA     ┆ Avaí          ┆ … ┆ 8    ┆ 21   ┆ 34      ┆ 10      │\n",
-       "│ 2022   ┆ 20    ┆ JUV     ┆ Juventude     ┆ … ┆ 13   ┆ 22   ┆ 29      ┆ 11      │\n",
-       "└────────┴───────┴─────────┴───────────────┴───┴──────┴──────┴─────────┴─────────┘"
+       "┌────────┬───────┬─────────┬─────────────┬───┬──────┬──────┬─────────┬─────────┐\n",
+       "│ season ┆ place ┆ acronym ┆ team        ┆ … ┆ draw ┆ loss ┆ goalsht ┆ goalsvt │\n",
+       "│ ---    ┆ ---   ┆ ---     ┆ ---         ┆   ┆ ---  ┆ ---  ┆ ---     ┆ ---     │\n",
+       "│ i64    ┆ i64   ┆ str     ┆ str         ┆   ┆ i64  ┆ i64  ┆ i64     ┆ i64     │\n",
+       "╞════════╪═══════╪═════════╪═════════════╪═══╪══════╪══════╪═════════╪═════════╡\n",
+       "│ 2007   ┆ 1     ┆ SAO     ┆ São Paulo   ┆ … ┆ 8    ┆ 7    ┆ 55      ┆ 20      │\n",
+       "│ 2007   ┆ 2     ┆ SAN     ┆ Santos      ┆ … ┆ 5    ┆ 14   ┆ 57      ┆ 21      │\n",
+       "│ 2007   ┆ 3     ┆ FLA     ┆ Flamengo    ┆ … ┆ 10   ┆ 11   ┆ 55      ┆ 18      │\n",
+       "│ 2007   ┆ 4     ┆ FLU     ┆ Fluminense  ┆ … ┆ 13   ┆ 9    ┆ 57      ┆ 27      │\n",
+       "│ …      ┆ …     ┆ …       ┆ …           ┆ … ┆ …    ┆ …    ┆ …       ┆ …       │\n",
+       "│ 2007   ┆ 17    ┆ COR     ┆ Corinthians ┆ … ┆ 14   ┆ 14   ┆ 40      ┆ 23      │\n",
+       "│ 2007   ┆ 18    ┆ JUV     ┆ Juventude   ┆ … ┆ 8    ┆ 19   ┆ 43      ┆ 18      │\n",
+       "│ 2007   ┆ 19    ┆ PAR     ┆ Paraná      ┆ … ┆ 8    ┆ 19   ┆ 42      ┆ 18      │\n",
+       "│ 2007   ┆ 20    ┆ AFC     ┆ América-RN  ┆ … ┆ 5    ┆ 29   ┆ 24      ┆ 12      │\n",
+       "└────────┴───────┴─────────┴─────────────┴───┴──────┴──────┴─────────┴─────────┘"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,10 +50,10 @@
     "\n",
     "df_campbras\n",
     "\n",
-    "df_brasileirao = df_brasileirao.with_columns(pl.when(pl.col(\"team\") == 'SaoPaulo').then(\"São Paulo\").when(pl.col(\"team\") == \"Atletico-MG\").then(\"Atlético-MG\").when(pl.col(\"team\") == \"America-MG\").then(\"América-MG\").when(pl.col(\"team\") == 'Goias').then(\"Goiás\").when(pl.col(\"team\") == 'RBBragantino').then(\"Bragantino\").when(pl.col(\"team\") == 'Cuiaba').then('Cuiabá').when(pl.col(\"team\") == 'Ceara').then('Ceará').when(pl.col(\"team\") == \"Atletico-GO\").then(\"Atlético-GO\").when(pl.col(\"team\") == \"Avai\").then(\"Avaí\").otherwise(pl.col(\"team\")).alias(\"team\"))\n",
-    "df_brasileirao_tabela = df_brasileirao.filter(pl.col(\"season\") == 2022)\n",
+    "df_brasileirao = df_brasileirao.with_columns(pl.when(pl.col(\"team\") == 'SaoPaulo').then(\"São Paulo\").when(pl.col(\"team\") == \"Atletico-MG\").then(\"Atlético-MG\").when(pl.col(\"team\") == \"America-MG\").then(\"América-MG\").when(pl.col(\"team\") == 'Goias').then(\"Goiás\").when(pl.col(\"team\") == 'RBBragantino').then(\"Bragantino\").when(pl.col(\"team\") == 'Cuiaba').then('Cuiabá').when(pl.col(\"team\") == 'Ceara').then('Ceará').when(pl.col(\"team\") == \"Atletico-GO\").then(\"Atlético-GO\").when(pl.col(\"team\") == \"Avai\").then(\"Avaí\").when(pl.col(\"team\") == 'Gremio').then(\"Grêmio\").when(pl.col(\"team\") == 'Nautico').then(\"Náutico\").when(pl.col(\"team\") == \"America-RN\").then(\"América-RN\").when(pl.col(\"team\") == \"Parana\").then(\"Paraná\").otherwise(pl.col(\"team\")).alias(\"team\"))\n",
+    "df_brasileirao_tabela = df_brasileirao.filter(pl.col(\"season\") == 2007)\n",
     "\n",
-    "df_filtrado = df_campbras.filter(pl.col(\"year\") == 2022)\n",
+    "df_filtrado = df_campbras.filter(pl.col(\"year\") == 2007)\n",
     "# print(df_filtrado)\n",
     "\n",
     "gols_mandante = (df_filtrado.groupby(\"hometeam\").agg(pl.col(\"goalsht\").sum().alias(\"goalsht\")).rename({\"hometeam\":\"team\"}))            \n",
@@ -63,8 +63,54 @@
     "gols_totais = (gols_mandante.join(goals_visitantes, on=\"team\", how=\"outer\").fill_null(0).with_columns(pl.col(\"goalsht\") + pl.col(\"goalsvt\")))\n",
     "\n",
     "df_brasileirao_tabela = df_brasileirao_tabela.join(gols_totais, on=\"team\", how=\"left\")   \n",
-    "df_brasileirao_tabela\n",
-    "# df_campbras.filter(pl.col(\"year\")==2022)"
+    "df_brasileirao_tabela.filter(pl.col(\"season\") == 2007)\n",
+    "\n",
+    "# df_campbras.filter(pl.col(\"year\")==2007)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "c38c047f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr > th,\n",
+       ".dataframe > tbody > tr > td {\n",
+       "  text-align: right;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (5, 1)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>region</th></tr><tr><td>str</td></tr></thead><tbody><tr><td>&quot;Southeast&quot;</td></tr><tr><td>&quot;Northeast&quot;</td></tr><tr><td>&quot;Central&quot;</td></tr><tr><td>&quot;South&quot;</td></tr><tr><td>&quot;North&quot;</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (5, 1)\n",
+       "┌───────────┐\n",
+       "│ region    │\n",
+       "│ ---       │\n",
+       "│ str       │\n",
+       "╞═══════════╡\n",
+       "│ Southeast │\n",
+       "│ Northeast │\n",
+       "│ Central   │\n",
+       "│ South     │\n",
+       "│ North     │\n",
+       "└───────────┘"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_teams = pl.read_parquet(fr'C:\\Users\\Thiago_SL\\projeto-backend\\Football-Analytics-Platform-Back-End\\teams.parquet')\n",
+    "df_teams = df_teams.with_columns(pl.when(pl.col(\"team\") == 'SaoPaulo').then(\"São Paulo\").when(pl.col(\"team\") == \"Atletico-MG\").then(\"Atlético-MG\").when(pl.col(\"team\") == \"America-MG\").then(\"América-MG\").when(pl.col(\"team\") == 'Goias').then(\"Goiás\").when(pl.col(\"team\") == 'RBBragantino').then(\"Bragantino\").when(pl.col(\"team\") == 'Cuiaba').then('Cuiabá').when(pl.col(\"team\") == 'Ceara').then('Ceará').when(pl.col(\"team\") == \"Atletico-GO\").then(\"Atlético-GO\").when(pl.col(\"team\") == \"Avai\").then(\"Avaí\").when(pl.col(\"team\") == 'Gremio').then(\"Grêmio\").when(pl.col(\"team\") == 'Nautico').then(\"Náutico\").when(pl.col(\"team\") == \"America-RN\").then(\"América-RN\").when(pl.col(\"team\") == \"Parana\").then(\"Paraná\").when(pl.col(\"team\") == 'Vitoria').then('Vitória').when(pl.col(\"team\") == 'SantoAndre').then(\"Santo André\").when(pl.col(\"team\") == 'PontePreta').then(\"Ponte Preta\").when(pl.col(\"team\") == 'Criciuma').then('Criciúma').when(pl.col(\"team\") == 'SantaCruz').then(\"Santa Cruz\").otherwise(pl.col(\"team\")).alias(\"team\"))\n",
+    "\n",
+    "# df_teams = df_teams.filter(pl.col(\"team\") == '')\n",
+    "df_teams.select(pl.col(\"region\")).unique()"
    ]
   }
  ],
